octoprint/endpoint/endpoints.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octoprint
  namespace: octoprint
spec:
 ports:
   - name: http
     port: 80
     protocol: TCP
     targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: octoprint
  namespace: octoprint
subsets:
  - addresses:
    - ip: 10.0.70.178
    ports:
    - port: 80
