octoprint/endpoint/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-signin: https://octoprint.davishaus.dev/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    nginx.ingress.kubernetes.io/auth-url: http://ak-outpost-davishaus.auth.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
  labels:
    app.kubernetes.io/instance: octoprint
    app.kubernetes.io/name: octoprint
  name: octoprint
  namespace: octoprint
spec:
  ingressClassName: nginx
  rules:
  - host: octoprint.davishaus.dev
    http:
      paths:
      - backend:
          service:
            name: octoprint
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - octoprint.davishaus.dev
    secretName: octoprint-tls-external
